<resources>
    <string name="app_name">fasting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="interval_fasting">Интервальное голодание</string>
    <string name="customize_yourself">Настройте трекер под себя</string>
    <string name="you_on_fasting">Этап голодания</string>
    <string name="you_on_eating">Этап приема пищи</string>

    <string name="your_tracker">Ваш трекер</string>
    <string name="last_time">Оставшееся время этапа</string>
    <string name="temp_picked_tracker">16/8</string>
    <string name="on_tracker">Включить трекер</string>
    <string name="on_fasting">Голодание</string>
    <string name="on_eating">Прием пищи</string>
    <string name="start_fasting_period">Начало голодания</string>
    <string name="end_fasting_period">Окончание голодания</string>
    <string name="start_eating_period">Начало приема пищи</string>
    <string name="end_eating_period">Окончание приема пищи</string>
    <string name="temp">Заглушка</string>
    <string name="edit">Редактировать</string>
    <string name="setting_tracker_your_own">Настройте трекер под себя</string>


    <string name="tracker_name_16_8">16/8</string>
    <string name="tracker_name_14_10">14/10</string>
    <string name="tracker_name_18_6">18/6</string>
    <string name="tracker_name_20_4">20/4</string>
    <string name="tracker_name_3_1">3/1</string>
    <string name="tracker_name_1_1">1/1</string>


    <string name="tracker16_8_description">16 часов голодания, 8 часов еды. Одна из самых популярных программ по всему миру!</string>
    <string name="tracker14_10_description">14 часов голодания, 10 часов еды. Отличный вариант для мягкого старта в интервальном питании.</string>
    <string name="tracker18_6_description">18 часов голодания, 6 часов еды. Режим для ускорения метаболизма и эффективного жиросжигания.</string>
    <string name="tracker20_4_description">20 часов голодания, 4 часа еды. Интенсивная программа для быстрого результата и дисциплинированного подхода.</string>
    <string name="tracker1_1_description">Один день обычного питания, один день с резким сокращением калорий до 0 или 600 ккал.</string>
    <string name="tracker3_1_description">Три дня обычного рациона и один день с сокращением калорий до 0 или 600 ккал.</string>
    <string name="countdown_timer_zero">00:00:00</string>
    <string name="check_or_switch_scenario">Изучите или выберите другие сценарии</string>
    <string name="scenario_name_string">Сценарий</string>
    <string name="cancel">Назад</string>
    <string name="save">Сохранить</string>
    <string name="scenario_description_placeholder">Описание:</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
        but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s
        with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
        software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="scenario_notice_placeholder">Примечание:</string>


</resources>