<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/fasting_tracker_image_view"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:src="@drawable/bg_purple_fasting_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/statusTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/exo_bold"
        app:autoSizePresetSizes="@array/autosize_text_sizes_24"
        app:autoSizeTextType="uniform"
        android:text="@string/setting_tracker_your_own"
        android:gravity="center"
        android:textColor="@color/dark_background_color"
        app:layout_constraintTop_toTopOf="@+id/fasting_tracker_image_view"
        app:layout_constraintEnd_toEndOf="@+id/fasting_tracker_image_view"
        app:layout_constraintStart_toStartOf="@+id/fasting_tracker_image_view"
        app:layout_constraintBottom_toTopOf="@id/circularProgressBarTimer"
        />


    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBarTimer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:cpb_background_progressbar_color="?attr/colorSecondaryVariant"
        app:cpb_background_progressbar_width="10dp"
        app:cpb_progress="1"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="?attr/colorTertiaryFixed"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="true"
        app:layout_constraintTop_toBottomOf="@+id/statusTimer"
        app:layout_constraintBottom_toTopOf="@+id/your_tracker_text"
        app:layout_constraintStart_toStartOf="@+id/fasting_tracker_image_view"
        app:layout_constraintEnd_toEndOf="@+id/fasting_tracker_image_view"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/your_tracker_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_tracker"
        android:textColor="@color/dark_background_color"
        android:fontFamily="@font/exo_regular"
        app:autoSizePresetSizes="@array/autosize_text_sizes_14"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@id/fasting_tracker_image_view"
        app:layout_constraintStart_toStartOf="@id/fasting_tracker_image_view"
        app:layout_constraintTop_toBottomOf="@id/circularProgressBarTimer"
        app:layout_constraintBottom_toTopOf="@id/picked_tracker_name_text"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/picked_tracker_name_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:fontFamily="@font/exo_bold"
        app:autoSizePresetSizes="@array/autosize_text_sizes_24"
        app:autoSizeTextType="uniform"
        android:gravity="center"
        android:visibility="visible"
        android:text="@string/temp_picked_tracker"
        android:textColor="@color/dark_main_background_elements"
        app:layout_constraintEnd_toEndOf="@id/fasting_tracker_image_view"
        app:layout_constraintStart_toStartOf="@id/fasting_tracker_image_view"
        app:layout_constraintTop_toBottomOf="@id/your_tracker_text"
        app:layout_constraintBottom_toTopOf="@+id/switch_fasting_mode_button"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/countdown_timer_text"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:fontFamily="@font/exo_extra_light"
        android:textSize="30sp"
        android:visibility="invisible"
        android:gravity="center"
        android:text="@string/countdown_timer_zero"
        android:textColor="@color/dark_main_background_elements"
        app:layout_constraintEnd_toEndOf="@id/fasting_tracker_image_view"
        app:layout_constraintStart_toStartOf="@id/fasting_tracker_image_view"
        app:layout_constraintTop_toTopOf="@+id/picked_tracker_name_text"
        app:layout_constraintBottom_toBottomOf="@+id/picked_tracker_name_text"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/switch_fasting_mode_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        style="@style/DarkBlueButton"
        android:textColor="@color/white"
        android:text="@string/on_tracker"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/picked_tracker_name_text"
        app:layout_constraintStart_toStartOf="@id/fasting_tracker_image_view"
        app:layout_constraintEnd_toEndOf="@id/fasting_tracker_image_view"
        app:layout_constraintBottom_toTopOf="@id/start_date_fasting_text"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/start_date_fasting_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/exo_bold"
        app:autoSizePresetSizes="@array/autosize_text_sizes_14"
        app:autoSizeTextType="uniform"
        android:text="@string/start_fasting_period"
        android:textColor="@color/dark_background_color"
        app:layout_constraintTop_toBottomOf="@id/switch_fasting_mode_button"
        app:layout_constraintStart_toStartOf="@+id/fasting_tracker_image_view"
        app:layout_constraintEnd_toStartOf="@id/end_date_fasting_text"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/end_date_fasting_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/end_fasting_period"
        android:textColor="@color/dark_background_color"
        android:fontFamily="@font/exo_bold"
        app:autoSizePresetSizes="@array/autosize_text_sizes_14"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@id/start_date_fasting_text"
        app:layout_constraintTop_toBottomOf="@id/switch_fasting_mode_button"
        app:layout_constraintEnd_toEndOf="@+id/fasting_tracker_image_view"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/start_date_fasting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp"
        android:textColor="@color/dark_background_color"
        android:fontFamily="@font/exo_regular"
        app:autoSizePresetSizes="@array/autosize_text_sizes_14"
        app:autoSizeTextType="uniform"
        app:layout_constraintTop_toBottomOf="@id/start_date_fasting_text"
        app:layout_constraintStart_toStartOf="@+id/fasting_tracker_image_view"
        app:layout_constraintEnd_toStartOf="@id/end_date_fasting_text"
        app:layout_constraintBottom_toBottomOf="@+id/fasting_tracker_image_view"
        android:layout_marginBottom="80dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/end_date_fasting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/temp"
        android:textColor="@color/dark_background_color"
        android:fontFamily="@font/exo_regular"
        app:autoSizePresetSizes="@array/autosize_text_sizes_14"
        app:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@id/start_date_fasting_text"
        app:layout_constraintTop_toBottomOf="@id/end_date_fasting_text"
        app:layout_constraintEnd_toEndOf="@+id/fasting_tracker_image_view"
        app:layout_constraintBottom_toBottomOf="@+id/fasting_tracker_image_view"
        android:layout_marginBottom="80dp"
        />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/changeStartTimeButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            style="@style/TransparentButton"
            android:visibility="invisible"
            android:text="@string/edit"
            android:textColor="@color/dark_main_background_elements"
            android:fontFamily="@font/exo_regular"
            app:autoSizePresetSizes="@array/autosize_text_sizes_14"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/fasting_tracker_image_view"
            app:layout_constraintTop_toBottomOf="@+id/start_date_fasting"
            app:layout_constraintEnd_toEndOf="@+id/start_date_fasting"
            app:layout_constraintStart_toStartOf="@+id/start_date_fasting"
            />



</androidx.constraintlayout.widget.ConstraintLayout>